--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,14 @@
     "tests"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#~0.5.4"
+    "polymer": "Polymer/polymer#~0.5.4",
+    "core-elements": "Polymer/core-elements#~0.5.4",
+    "paper-elements": "Polymer/paper-elements#~0.5.4",
+    "firebase": "~2.1.2",
+    "mark-down": "~0.6.3"
+  },
+  "resolutions": {
+    "core-component-page": "^0.5",
+    "polymer": "~0.5.4"
   }
 }
