--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,9 @@
     "core-elements": "Polymer/core-elements#~0.5.4",
     "paper-elements": "Polymer/paper-elements#~0.5.4",
     "firebase": "~2.1.2",
-    "mark-down": "~0.6.3"
+    "mark-down": "~0.6.3",
+    "app-router": "~2.4.0",
+    "pushstate-anchor": "~0.3.0"
   },
   "resolutions": {
     "core-component-page": "^0.5",
