--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gulp": "^3.8.10"
   },
   "devDependencies": {
+    "connect-history-api-fallback": "0.0.5",
     "gulp": "^3.8.10",
     "gulp-connect": "^2.2.0",
     "gulp-vulcanize": "^5.0.0"
