--- a/bower.json
+++ b/bower.json
@@ -20,8 +20,7 @@
     "paper-elements": "Polymer/paper-elements#~0.5.4",
     "firebase": "~2.1.2",
     "mark-down": "~0.6.3",
-    "app-router": "~2.4.0",
-    "pushstate-anchor": "~0.3.0"
+    "app-router": "~2.4.1"
   },
   "resolutions": {
     "core-component-page": "^0.5",
